--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Organic</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
 </head>
 
 <body>
@@ -140,9 +142,160 @@
         </section>
         <section class="section5">
             <div class="subsect5">
-                <article class="art2"> <img src="./img/portfolio1.jpg"><img src="./img/portfolio2.jpg"><img src="./img/portfolio3.jpg"></article>
-                <article class="art2"><img src="./img/portfolio4.jpg"><img src="./img/portfolio5.jpg"><img src="./img/portfolio6.jpg"></article>
+                <article class="art2">
+                    <img src="./img/portfolio1.jpg">
+                    <img src="./img/portfolio2.jpg">
+                    <img src="./img/portfolio3.jpg">
+                </article>
+                <article class="art2">
+                    <img src="./img/portfolio4.jpg">
+                    <img src="./img/portfolio5.jpg">
+                    <img src="./img/portfolio6.jpg">
+                </article>
             </div>
+        </section>
+        <section class="sec6">
+            <div class="chevrons">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <div>
+                <p class="divp">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab culpa vero consectetur iusto adipisci tempore minus quis repudiandae
+                    incidunt magni ad labore necessitatibus iure, odit, eum fugit, natus dolorum quod?
+                </p>
+                <img src="./img/personal1.jpg" alt="" class="imgchev">
+                <p>
+                    <span class="rob">ROBERT SMITH -</span> Web Designer</p>
+            </div>
+            <div class="chevrons">
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </section>
+        <section class="sec7">
+            <div class="service">
+                <h1>Our Pricing</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur libero consequatur odio quidem magnam ratione, vero
+                    ducimus repudiandae sequi necessitatibus tenetur minima consequuntur aut aspernatur eaque dolorum, vitae
+                    optio enim.
+                </p>
+            </div>
+        </section>
+        <br>
+        <section class="sec8">
+            <article class="artsec8">
+
+                <h1 class="arth1">BASIC</h1>
+                <div class="radius">
+                    <p> $95 </p>
+                    <p> 1 Month</p>
+                </div>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p class="selplan">SELECT PLAN</p>
+            </article>
+
+            <article class="artsec8">
+
+                <h1 class="arth1">BASIC</h1>
+                <div class="radius">
+                    <p> $95 </p>
+                    <p> 1 Month</p>
+                </div>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p class="selplan">SELECT PLAN</p>
+            </article>
+
+            <article class="artsec8">
+
+                <h1 class="arth1">BASIC</h1>
+                <div class="radius">
+                    <p> $95 </p>
+                    <p> 1 Month</p>
+                </div>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p class="selplan">SELECT PLAN</p>
+            </article>
+        </section>
+        <section class="sec9">
+            <div class="imgsec9">
+                <img src="./img/client4.png" alt="">
+                <img src="./img/client3.png" alt="">
+                <img src="./img/client5.png" alt="">
+                <img src="./img/client6.png" alt="">
+                <img src="./img/client7.png" alt="">
+                <img src="./img/client8.png" alt="">
+            </div>
+        </section>
+        <section class="sec10">
+            <div class="service">
+                <h1>Our Latest News</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur libero consequatur odio quidem magnam ratione, vero
+                    ducimus repudiandae sequi necessitatibus tenetur minima consequuntur aut aspernatur eaque dolorum, vitae
+                    optio enim.
+                </p>
+            </div>
+        </section>
+        <section class="sec11">
+    
+            <article class="artsec11">
+                <img src="./img/post1.jpg" alt=""  class="imgsec11">
+                <h4>HERE GOES AN AWESOME BLOG</h4>
+                <div class="datacont">
+                    <i class="far fa-user"></i> Organic
+                    <i class="far fa-calendar-alt"></i>01 Janv 2018
+                    <br>
+                    <i class="far fa-comments"></i>12
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur libero consequatur odio quidem magnam ratione, vero
+                    ducimus repudiandae sequi necessitatibus tenetur minima consequuntur aut aspernatur eaque dolorum, vitae
+                    optio enim.
+                </p>
+            </article>
+            <article class="artsec11">
+                    <img src="./img/post1.jpg" alt="" class="imgsec11">
+                    <h4>HERE GOES AN AWESOME BLOG</h4>
+                    <div class="datacont">
+                        <i class="far fa-user"></i> Organic
+                        <i class="far fa-calendar-alt"></i>01 Janv 2018
+                        <br>
+                        <i class="far fa-comments"></i>12
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur libero consequatur odio quidem magnam ratione, vero
+                        ducimus repudiandae sequi necessitatibus tenetur minima consequuntur aut aspernatur eaque dolorum, vitae
+                        optio enim.
+                    </p>
+                </article>
+                <article class="artsec11">
+                        <img src="./img/post1.jpg" alt=""  class="imgsec11">
+                        <h4>HERE GOES AN AWESOME BLOG</h4>
+                        <div class="datacont">
+                            <i class="far fa-user"></i> Organic
+                            <i class="far fa-calendar-alt"></i>01 Janv 2018
+                            <br>
+                            <i class="far fa-comments"></i>12
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur libero consequatur odio quidem magnam ratione, vero
+                            ducimus repudiandae sequi necessitatibus tenetur minima consequuntur aut aspernatur eaque dolorum, vitae
+                            optio enim.
+                        </p>
+                    </article>
+            
         </section>
 
 </body>
